# shargon

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix
crates/shargon-backend/: Cargo.toml
crates/shargon-backend/src/: lib.rs
crates/shargon-client/: Cargo.toml  build.rs
crates/shargon-client/src/: arguments.rs  daemon.rs  main.rs
crates/shargon-client/src/cli_command/: cancel.rs  machines.rs  mod.rs  ping.rs  run.rs  task_status.rs  tasks.rs  version.rs
crates/shargon-daemon/: Cargo.toml
crates/shargon-daemon/src/: grpc_service.rs  main.rs
crates/shargon-daemon/src/cli_command/: run.rs
crates/shargon-daemon/src/rpc/: mod.rs
crates/shargon-nspawn/: Cargo.toml
crates/shargon-nspawn/src/: lib.rs
crates/shargon-protocol/: Cargo.toml  build.rs
crates/shargon-protocol/proto/shargon/v1/: vm_service.proto
crates/shargon-protocol/src/: lib.rs
crates/shargon-qemu/: Cargo.toml
crates/shargon-qemu/src/: lib.rs
crates/shargon-settings/: Cargo.toml
crates/shargon-settings/src/: lib.rs
crates/shargon-version/: Cargo.toml
crates/shargon-version/src/: lib.rs
docs/: nix-qemu.md
