[workspace]
resolver = "3"
default-members = ["crates/shargon-client"]
members = ["crates/*"]

[workspace.package]
edition = "2024"
version = "26.3.5"

[workspace.dependencies]
# --- Local Crates ---
shargon-settings.path = "crates/shargon-settings"
shargon-protocol.path = "crates/shargon-protocol"
shargon-backend.path = "crates/shargon-backend"
shargon-version.path = "crates/shargon-version"

shargon-qemu.path = "crates/shargon-qemu"
shargon-nspawn.path = "crates/shargon-nspawn"


# --- Vendored Crates ---
clap = { version = "4", features = ["derive"] }
anyhow = "1"

tokio = { version = "1", features = ["full"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}

tonic        = { version = "0.12", features = ["transport"] }
prost        = "0.13"
tonic-build  = { version = "0.12" }
protox       = "0.7"
tokio-stream = { version = "0.1", features = ["net"] }
tower        = "0.4"
http         = "1"
hyper-util   = { version = "0.1", features = ["tokio"] }
