[package]
name = "shargon-client"
version.workspace = true
edition.workspace = true

[dependencies]
shargon-settings.workspace = true
shargon-protocol.workspace = true
shargon-version.workspace = true

tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
tonic.workspace = true
tower.workspace = true
http.workspace = true
hyper-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
shargon-version.workspace = true
