[package]
name = "shargon-client"
version.workspace = true
edition.workspace = true

[dependencies]
shargon-settings.workspace = true
shargon-protocol.workspace = true
shargon-version.workspace = true

tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower = "0.5"
hyper-util = "0.1"
libc = "0.2"

[build-dependencies]
shargon-version.workspace = true

[dev-dependencies]
tempfile = "3"
tokio-stream = { version = "0.1", features = ["net"] }
