[package]
name = "shargon-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
shargon-settings.workspace = true
shargon-protocol.workspace = true
shargon-version.workspace = true

tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
tonic.workspace = true
tokio-stream = { version = "0.1", features = ["net"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
shargon-version.workspace = true
